--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -86,11 +86,22 @@ newlines {
 
   topLevelStatementBlankLines = [
     {
-      maxNest = 2
-      blanks = 1
+      blanks {
+        beforeAll = -1,
+        afterAll = 1,
+        beforeEndMarker = -1
+      }
+
       minBreaks = 0
     },
     {
+      blanks {
+        beforeAll = -1,
+        before = 1,
+        after = 1,
+        afterAll = -1,
+        beforeEndMarker = -1
+      }
 
       minBreaks = 1
     }
